added attack trigger box/script, dmg working

--- a/Unity-Project.csproj
+++ b/Unity-Project.csproj
@@ -283,10 +283,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\playerControl.cs" />
+    <Compile Include="Assets\script\attacktrigger.cs" />
     <Compile Include="Assets\script\health.cs" />
     <Compile Include="Assets\script\movingObject.cs" />
     <Compile Include="Assets\script\PhysicsObject.cs" />
     <Compile Include="Assets\script\player.cs" />
+    <Compile Include="Assets\script\playerattack.cs" />
     <Compile Include="Assets\script\playerControl.cs" />
   </ItemGroup>
   <ItemGroup>
