added pizza, no physics yet

--- a/Unity-Project.csproj
+++ b/Unity-Project.csproj
@@ -285,9 +285,11 @@
     <Compile Include="Assets\playerControl.cs" />
     <Compile Include="Assets\script\attacktrigger.cs" />
     <Compile Include="Assets\script\health.cs" />
+    <Compile Include="Assets\script\itemManager.cs" />
     <Compile Include="Assets\script\movingObject.cs" />
     <Compile Include="Assets\script\pause.cs" />
     <Compile Include="Assets\script\PhysicsObject.cs" />
+    <Compile Include="Assets\script\pizza.cs" />
     <Compile Include="Assets\script\player.cs" />
     <Compile Include="Assets\script\playerattack.cs" />
     <Compile Include="Assets\script\playerControl.cs" />
